<resources>
    <string name="app_name">LogisticSupport</string>
    <string name="manpower">人力</string>
    <string name="ammunition">弹药</string>
    <string name="ration">口粮</string>
    <string name="parts">零件</string>
    <string name="no">编号</string>
    <string name="item">道具</string>
    <string name="time">时长</string>
    <string name="author">https://bbs.nga.cn/read.php?tid=17537075</string>
    <string name="source_code">https://github.com/dfsly/LogisticSupport</string>
</resources>
