<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardView.Reactive"
    app:cardElevation="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <TextView
            android:layout_width="0dp"

            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/manpower"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ammunition"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ration"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/parts"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"

            android:gravity="center"
            android:text="@string/item"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5">

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/time"
            android:textSize="12sp" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/oval_start"
                android:onClick="starOval"
                android:layout_width="27dp"
                android:src="@drawable/oval_button"
                android:layout_height="27dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>