<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardView.Reactive"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_item_recycler"
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <TextView
            android:id="@+id/no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/manpower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:gravity="center"
            android:text="@string/manpower"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/ammunition"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ammunition"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/ration"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ration"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/parts"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/parts"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/img_addition_item_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"
            android:padding="3dp" />

        <TextView
            android:id="@+id/text_addition_item_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"

            android:textSize="12sp" />

        <ImageView
            android:id="@+id/img_addition_item_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center"
            android:padding="3dp" />

        <TextView
            android:id="@+id/text_addition_item_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time"
            android:textSize="12sp" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <CheckBox
                android:id="@+id/cb_down_time_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>